# tapetum

./: .gitmodules  CMakeLists.txt  README.md
CMake/: MetaPrebuild.cmake
MetaCPP-CLI/: ASTScraper.cpp  CMakeLists.txt  MetaExporter.cpp  MetaExporter.hpp  ScraperTool.cpp
MetaCPP-CLI/templates/: source.template
MetaCPP/src/MetaCPP/: Field.cpp  Type.cpp
cmake/: MetaPrebuild.cmake
example/: CMakeLists.txt  main.cpp
include/: ASTScraper.hpp  DeserializeCodeWriter.h  DeserializePragmaHandler.h  DeserializeWriter.h  DeserializeWriterAdapter.h  DeserializeWriterTest.h  JsonSerializer.hpp  MetaExporter.hpp  ParsePragma.h  Runtime.hpp  SerializePragmaHandler.h  SerializeWriter.h  SerializeWriterAdapter.h  SerializeWriterTest.h
include/templates/: header.template  source.template
metacpp/: CMakeLists.txt
metacpp/src/: JsonSerializer.cpp  Method.cpp  QualifiedType.cpp
metacpp_cli/: CMakeLists.txt
metacpp_cli/include/: ASTScraper.hpp
metacpp_cli/src/: ASTScraper.cpp  MetaExporter.cpp
src/: ASTScraper.cpp  DeserializePragmaHandler.cpp  DeserializeWriter.cpp  DeserializeWriterAdapter.cpp  DeserializeWriterTest.cpp  Field.cpp  JsonSerializer.cpp  Main.cpp  Method.cpp  ParsePragma.cpp  QualifiedName.cpp  QualifiedType.cpp  Runtime.cpp  SequentialContainer.cpp  SerializePragmaHandler.cpp  SerializeWriter.cpp  SerializeWriterTest.cpp  Storage.cpp  Type.cpp  plugin.cpp
